TEST_PROGRAMS/INVALID/stefan_knudsen/tooMuchComment.min
#
/*
if true then else endif
*/
